trying to fix styling on mobile, changed the dictionary

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -95,7 +95,7 @@ button{
     @media only screen and (max-width: 640px) {
 		font-size: 40px;
         top: -15%;
-        left: 18%;
+        left: 15%;
 	}
 }
 
@@ -237,7 +237,7 @@ button{
     @media only screen and (max-width: 640px) {
         width: 45%;
         margin: 0% 27.5% 0% 27.5%;
-        height: 30px;
+        height: 20px;
         top: 10%;
         left: 0%;
     }
@@ -251,9 +251,9 @@ button{
     position: absolute;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     @media only screen and (max-width: 640px) {
-        font-size: 13px;
+        font-size: 10px;
         top: -50%;
-        left: 15%;}
+        left: 22%;}
 }
 
 
